--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	display: flex;
+	justify-content: center;
+}
 .root {
 	display: flex;
 	flex-direction: column;
@@ -8,7 +12,6 @@
 .row {
 	display: flex;
 	flex-direction: row;
-	background-color: red;
 	border-top: 5px solid black;
 	border-right: 5px solid black;
 	border-left: 5px solid black;
@@ -17,32 +20,43 @@
 	padding: 0;
 	font-size: 60px;
 }
+.cell:hover {
+	background-color: white;
+}
+.cell:active {
+	background-color: antiquewhite;
+}
 .row.display {
-	background-color: blue;
+	background-color: black;
 	display: flex;
 	flex-direction: row-reverse;
 	align-items: center;
-
+	padding: 10px;
 	color: white;
+	font-family: monospace;
 }
 .row.clear {
 	background-color: yellow;
 	padding: 0px;
 }
-.row.numbers {
-}
+
 .row.zero {
 	background-color: violet;
 	border-bottom: 5px solid black;
 }
 .cell {
-	background-color: green;
+	background-color: antiquewhite;
 	border: 1px solid black;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex: 1;
+	cursor: pointer;
 }
+.cell.zero {
+	flex: 3;
+}
+
 .cell.clear {
 	flex: 2;
 }
@@ -51,4 +65,9 @@
 }
 .cell.operator {
 	flex: 1;
+	background-color: orange;
+	color: white;
+}
+.cell.operator:hover {
+	background-color: rgb(252, 194, 5);
 }
