--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
 }
 .cell:active {
 	background-color: antiquewhite;
+	border: 1px solid white;
+	padding: 0;
 }
 .row.display {
 	background-color: black;
