--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .row {
 	display: flex;
 	flex-direction: row;
-
+	justify-content: space-between;
 	text-align: center;
 	flex: 1;
 	padding: 0;
